--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@ description = '国内首个开源网络流量可视化分析平台'
 ## Setting this to true will add a "noindex" to *EVERY* page on the site..
 removefromexternalsearch = false
 ## Gh repo for site footer (include trailing slash)
-ghrepo = "hhttps://github.com/abyssalfish-os/abyssalfish-os.github.io/"
+ghrepo = "https://github.com/abyssalfish-os/abyssalfish-os.github.io/"
 ## GH Repo for filing a new issue
 github_repo = "https://github.com/abyssalfish-os/liuying/issues/new"
 ### Edit content repo (set to automatically enter "edit" mode; this is good for "improve this page" links)
