add doc and update news

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,6 +30,12 @@
   identifier = "demo"
   url = "/demo/"
 
+[[docs]]
+  name = "其它资料"
+  weight = 80
+  identifier = "other"
+  url = "/other/"
+
 
 [[docs]]
   name = "欢迎贡献"
